[gd_scene load_steps=9 format=3 uid="uid://crqrv5lsmuftg"]

[ext_resource type="Script" uid="uid://ctnjtvl46kqr6" path="res://src/scenes/Game/Components/Cargo/CargoDropper.gd" id="1_ky43u"]
[ext_resource type="PackedScene" uid="uid://dnmw00r2td2ol" path="res://src/scenes/Game/Components/Cargo/Cargo.tscn" id="2_gihkj"]
[ext_resource type="SpriteFrames" uid="uid://c76q5kt2uwbws" path="res://assets/images/Forges/forge.tres" id="3_ljqjl"]
[ext_resource type="SpriteFrames" uid="uid://b4inykhulujrb" path="res://assets/images/Forges/forgePipes.tres" id="4_u4flg"]
[ext_resource type="Texture2D" uid="uid://ctpjhv3x1hych" path="res://assets/images/cargo/Alternatives/Packages_1.png" id="5_qxb30"]
[ext_resource type="SpriteFrames" uid="uid://c0jh3uryv1v3i" path="res://assets/images/Forges/smoke.tres" id="5_xpxgs"]
[ext_resource type="SpriteFrames" uid="uid://2l1r36dpe3ik" path="res://assets/images/Forges/bubbles.tres" id="6_0ried"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrmgv"]
size = Vector2(166, 141)

[node name="CargoDropper" type="Node2D"]
script = ExtResource("1_ky43u")
cooldownTicks = 4
cargoScene = ExtResource("2_gihkj")

[node name="ForgeBody" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_ljqjl")
animation = &"water"

[node name="Pipes" type="AnimatedSprite2D" parent="ForgeBody"]
position = Vector2(0, -20)
sprite_frames = ExtResource("4_u4flg")
animation = &"drop"

[node name="Smoke" type="Node2D" parent="ForgeBody/Pipes"]
visible = false

[node name="Smoke" type="AnimatedSprite2D" parent="ForgeBody/Pipes/Smoke"]
self_modulate = Color(0.174626, 0.174626, 0.174626, 1)
clip_children = 2
z_index = -1
position = Vector2(35, -28)
sprite_frames = ExtResource("5_xpxgs")
animation = &"drop"
autoplay = "drop"
frame_progress = 0.401534

[node name="Smoke2" type="AnimatedSprite2D" parent="ForgeBody/Pipes/Smoke"]
self_modulate = Color(0.174626, 0.174626, 0.174626, 1)
clip_children = 2
z_index = -1
position = Vector2(-35, -28)
rotation = 3.14159
scale = Vector2(1, -1)
sprite_frames = ExtResource("5_xpxgs")
animation = &"drop"
autoplay = "drop"
frame_progress = 0.31386

[node name="Bubbles" type="Node2D" parent="ForgeBody"]
visible = false

[node name="Bubble1" type="AnimatedSprite2D" parent="ForgeBody/Bubbles"]
position = Vector2(-6, -40)
sprite_frames = ExtResource("6_0ried")
animation = &"Bubble"
autoplay = "Bubble"

[node name="Bubble2" type="AnimatedSprite2D" parent="ForgeBody/Bubbles"]
position = Vector2(7, -48)
scale = Vector2(1.5, 1.5)
sprite_frames = ExtResource("6_0ried")
animation = &"Bubble"
autoplay = "Bubble"
frame = 2

[node name="Bubble3" type="AnimatedSprite2D" parent="ForgeBody/Bubbles"]
position = Vector2(-5, -58)
scale = Vector2(3, 3)
sprite_frames = ExtResource("6_0ried")
animation = &"Bubble"
autoplay = "Bubble"
frame = 1

[node name="DetectionArea2D" type="Area2D" parent="."]
position = Vector2(0.5, 184)
collision_layer = 0
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
position = Vector2(0, -36.5)
shape = SubResource("RectangleShape2D_qrmgv")
debug_color = Color(3.70607e-06, 0.664926, 0.338222, 0)

[node name="SpawnMarker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0.5, 52)

[node name="DistributionMarker" type="Marker2D" parent="SpawnMarker"]
unique_name_in_owner = true

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2

[node name="UI_Helpers" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_top = -191.0
offset_right = 40.0
offset_bottom = -151.0

[node name="Control" type="Control" parent="UI_Helpers"]
z_index = -1
layout_mode = 3
anchors_preset = 0
offset_left = -11.0
offset_top = -74.0
offset_right = 66.0
offset_bottom = -45.0

[node name="Panel" type="Panel" parent="UI_Helpers/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI_Helpers/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Press [E]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="UI_Helpers"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -36.0
offset_top = -73.0
offset_right = -24.0
offset_bottom = -46.0
max_value = 3.0
step = 1.0
fill_mode = 3
show_percentage = false

[node name="TemporaryIcon" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0.5, 0)
texture = ExtResource("5_qxb30")

[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_entered"]
[connection signal="body_exited" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
